# SegyIO

applications/: segyviewtest.py
python/segyview/: CMakeLists.txt  __init__.py  layoutcanvas.py  layoutcombo.py  segyplot.py  slicemodel.py  slicemodelcontroller.py  sliceview.py  sliceviewwidget.py  util.py
resources/img/: CMakeLists.txt
tests/: CMakeLists.txt  test_slicemodel.py
